adding method to fetch Master Data Analysis records

--- a/force-app/main/default/classes/VDT_DataCalculationService.cls
+++ b/force-app/main/default/classes/VDT_DataCalculationService.cls
@@ -1,4 +1,8 @@
 public inherited sharing class VDT_DataCalculationService {
+
+    public static final String MASTER_DATA_ANALYSIS_SUMMARY_FILE_NAME = 'onekey_analysis_summary';
+    public static final String MASTER_DATA_ANALYSIS_DETAIL_FILE_NAME = 'onekey_analysis_detail';
+
     public static final String STATUS_COMPLETED = 'Completed';
     public static final String STATUS_ERROR = 'Error';
     public static final String STATUS_IN_PROGRESS = 'In Progress';
@@ -62,6 +66,33 @@ public inherited sharing class VDT_DataCalculationService {
             End_Year__c = calculationParameters.endYear,
             End_Month__c = calculationParameters.endMonth
         );
+    }
+
+    public static DataCalculation getExistingCalculationMasterAnalysis(CalculationAnalysisParameters searchParameters) {
+        List<VDT_Data_Calculation__c> calculations = new VDT_DataCalculationSelector().withLimit(1).getByAnalysisCalculationParameters(searchParameters);
+        
+        DataCalculation calculation = new DataCalculation();
+        if (calculations.isEmpty() == false) {
+            calculation.status = calculations[0].Status__c;
+            calculation.calculationDate = String.valueOf(calculations[0].VDT_Calculation_Date__c);
+            Attachment att = VDT_AttachmentService.getAttachmentForRecord(
+                VDT_DataCalculationService.MASTER_DATA_ANALYSIS_SUMMARY_FILE_NAME,
+                VDT_AttachmentService.JSON_FORMAT, 
+                calculations[0].Id
+            );
+
+            Attachment attDetail = VDT_AttachmentService.getAttachmentForRecord(
+                VDT_DataCalculationService.MASTER_DATA_ANALYSIS_DETAIL_FILE_NAME,
+                VDT_AttachmentService.JSON_FORMAT, 
+                calculations[0].Id
+            );
+
+            if (att != null && attDetail != null) {
+                calculation.data = att.Body.toString();
+                calculation.detailData = attDetail.Body.toString();
+            }
+        }
+        return calculation;
     }
 
     public static DataCalculation getExistingCalculation(CalculationParameters calculationParameters) {
@@ -151,6 +182,8 @@ public inherited sharing class VDT_DataCalculationService {
         public String data;
         @AuraEnabled
         public String calculationDate;
+        @AuraEnabled
+        public String detailData;
     }
 
     public class MonitoringData {
@@ -169,6 +202,20 @@ public inherited sharing class VDT_DataCalculationService {
     public class CalculationParameters {
         @AuraEnabled
         public String objectName;
+        @AuraEnabled
+        public Integer startYear;
+        @AuraEnabled
+        public Integer startMonth;
+        @AuraEnabled
+        public Integer endYear;
+        @AuraEnabled
+        public Integer endMonth;
+        public String status;
+    }
+
+    public class CalculationAnalysisParameters {
+        @AuraEnabled
+        public List<String> countries;
         @AuraEnabled
         public Integer startYear;
         @AuraEnabled
