detail data calculations completed

--- a/force-app/main/default/classes/VDT_EmailService.cls
+++ b/force-app/main/default/classes/VDT_EmailService.cls
@@ -1,7 +1,42 @@
 public inherited sharing class VDT_EmailService {
     public static final String TEMPLATE_CALCULATION_FINISHED = 'VDT_FieldCamparisonCalculationFinished';
+    public static final String TEMPLATE_MASTER_ANALYSIS_FINISHED = 'VDT_MasterAnalysisCalculationFinished';
     public static final String SENDER_DISPLAY_NAME = 'BASELife CRM [TBD]';
     public static final String REPLY_TO = 'no-reply@base-crm.com.TBD';
+
+    public static void sendMasterAnalysisCalculationFinishedEmailNotification(String countries) {
+
+        List<VDT_Data_Calculation__c> calculationObjects = new VDT_DataCalculationSelector().withLimit(1).getByCountries(countries);
+        List<EmailTemplate> emailTemplates = new VDT_EmailTemplateSelector().getByName(TEMPLATE_MASTER_ANALYSIS_FINISHED);
+        if (emailTemplates.isEmpty()) {
+            throw new EmailServiceException('Email Template Not Found');
+        }
+        if (calculationObjects.isEmpty()) {
+            throw new EmailServiceException('Calculation For Notification Not Found');
+        }
+        VDT_EmailService.sendEmail(emailTemplates[0].Id, UserInfo.getUserId(), calculationObjects[0].Id);
+    }
+
+    private static void sendEmail(String templateId, String userId, String sobjectId) {
+        
+        Messaging.SingleEmailMessage message = Messaging.renderStoredEmailTemplate(templateId, userId, sobjectId);
+
+        message.setTargetObjectId(UserInfo.getUserId()); 
+        message.setSenderDisplayName(SENDER_DISPLAY_NAME); 
+        message.setReplyTo(REPLY_TO);
+        message.setUseSignature(false); 
+        message.setBccSender(false); 
+        message.setSaveAsActivity(false); 
+        message.toAddresses = new String[] { UserInfo.getUserEmail() };
+
+
+        Messaging.SingleEmailMessage[] messages = new List<Messaging.SingleEmailMessage> {message};
+        Messaging.SendEmailResult[] results = Messaging.sendEmail(messages);
+        
+        if (!results[0].success) {
+            throw new EmailServiceException('Email Failed To Send: ' +  results[0].errors[0].message);
+        } 
+    }
 
     public static void sendFieldCalculationFinishedEmailNotification(String objectName) {
         List<EmailTemplate> emailTemplates = new VDT_EmailTemplateSelector().getByName(TEMPLATE_CALCULATION_FINISHED);
