--- a/force-app/main/default/classes/VDT_RecordTypeService.cls
+++ b/force-app/main/default/classes/VDT_RecordTypeService.cls
@@ -4,4 +4,8 @@ public inherited sharing class VDT_RecordTypeService {
         return new VDT_RecordTypeSelector().getAllRecordTypesForSObject(sobjectName);
     }
 
+    public static List<RecordType> getRecordTypeByObjectAndName(String sobjectName, String developerName) {
+        return new VDT_RecordTypeSelector().getRecordTypeByObjectAndName(sobjectName, developerName);
+    }
+
 }
